--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,21 @@
         <title>Apprisen</title>
     </head>
     <body>
-        <p>hello</p>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main_nav">
+            <a class="navbar-brand" href="/index.html">Logo</a>
+            <div class="container" id="nav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/resources/about_me.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/resources/projects.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/files/Resume.pdf">Learning</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </body>
 </html>
