--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang = "en">
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        
+
         <title>Apprisen</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main_nav">
-            <a class="navbar-brand" href="/index.html">Logo</a>
+            <img src="/src/images/logo.png" alt = "logo" style = "width:50px;height:50px;""/a>
             <div class="container" id="nav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
