--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main_nav">
-            <a class="navbar-brand" href="index.html">Logo</a>
+            <img src="/src/images/logo.png" alt = "logo" style = "width:50px;height:50px;""/a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -15,7 +15,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown"> 
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Why Apprisen</a>
                             <a class="dropdown-item" href="#">FAQ's</a>
                             <a class="dropdown-item" href="#">Client Testimonials</a>
