--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="/files/Resume.pdf">Learning</a>
                     </li>
                     <li class="nav-item">
-                        <button class="btn btn-outline-success my-2 my-sm-0" onclick="window.location.href='\src\components\pages\logIn.js'" type="submit">Sign Up</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" onclick="window.location.href='/components/pages/logIn.js'" type="submit">Sign Up</button>
 
                     </li>
                 </ul>
