--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -24,7 +24,7 @@
     <img class="mb-4" src="team-9/src/images/logo.jpg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Username</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="">
+    <input id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="">
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
     <input class="btn btn-lg btn-primary btn-block" type="submit">Sign in</input>
