--- a/public/stylesheets/dashboard/dashboard.html
+++ b/public/stylesheets/dashboard/dashboard.html
@@ -48,14 +48,14 @@
   </div>
 </nav>    
 
-<div id="section1" class="container-fluid">
+<div id="progress" class="container-fluid">
   <h1><center>Hello Test!</center></h1>
 </div>
-<div id="section2" class="container-fluid">
+<div id="totaldebt" class="container-fluid">
   <h1>Section 2</h1>
   <p>chart</p>
 </div>
-<div id="section3" class="container-fluid">
+<div id="individualdebt" class="container-fluid">
   <h1>Section 3</h1>
   <p>chart</p>
 </div>
