--- a/public/stylesheets/dashboard/dashboard.html
+++ b/public/stylesheets/dashboard/dashboard.html
@@ -33,9 +33,9 @@
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="#progress">Progress</a></li>
-          <li><a href="#totaldebt">Total</a></li>
-          <li><a href="#individualdebt">Individual</a></li>
+          <li><a href="#section1">Progress</a></li>
+          <li><a href="#section2">Total</a></li>
+          <li><a href="#section3">Individual</a></li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">External Resources<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#section41">Source Section 1</a></li>
@@ -48,14 +48,14 @@
   </div>
 </nav>    
 
-<div id="progress" class="container-fluid">
+<div id="section1" class="container-fluid">
   <h1><center>Hello Test!</center></h1>
 </div>
-<div id="totaldebt" class="container-fluid">
+<div id="section2" class="container-fluid">
   <h1>Section 2</h1>
   <p>chart</p>
 </div>
-<div id="individualdebt" class="container-fluid">
+<div id="section3" class="container-fluid">
   <h1>Section 3</h1>
   <p>chart</p>
 </div>
