--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -20,17 +20,15 @@
 </head>
 
 <body class="text-center">
-  <form class="form-signin" action="" method="post">
+  <form class="form-signin" method="post">
     <img class="mb-4" src="team-9/src/images/logo.jpg" alt="" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Username</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Username" required="" autofocus="">
+    <input name="username" type="email" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+    <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
     <input class="btn btn-lg btn-primary btn-block" type="submit">Sign in</input>
   </form>
-
-
 </body>
 
 </html>
