--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -50,6 +50,12 @@
 
 <div id="section1" class="container-fluid">
   <h1><center>Hello Test!</center></h1>
+    <div class="progress">
+  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
+  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+    40%
+  </div>
+</div>
 </div>
 <div id="section2" class="container-fluid">
   <h1>Section 2</h1>
