--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -7,11 +7,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="loading-bar.css"/>
+  <script type="text/javascript" src="loading-bar.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
   <style>
   body {
-      position: relative; 
+      position: relative;
   }
-  #section1 {padding-top:50px;height:800px;color: #fff; background-color: #1A5276;}
+  #section1 {padding-top:90px;height:800px;color: #fff; background-color: #1A5276;}
   #section2 {padding-top:50px;height:500px;color: #fff; background-color: #FDFEFE;}
   #section3 {padding-top:50px;height:500px;color: #fff; background-color: #B3B6B7;}
   #section41 {padding-top:50px;height:500px;color: #fff; background-color: #FDFEFE;}
@@ -26,7 +29,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
+          <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">Logo</a>
     </div>
@@ -46,19 +49,57 @@
       </div>
     </div>
   </div>
-</nav>    
+</nav>
 
 <div id="section1" class="container-fluid">
   <h1><center>Hello Test!</center></h1>
-    <div class="progress">
-  <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar"
-  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-    40%
+    <div
+      data-preset="stripe"
+      data-fill-background= "f99"
+      class="ldBar label-center"
+      data-transition-in = "35"
+      data-value="35"
+      style="width:70%;height:50%;margin:auto"
+    ></div>
   </div>
 </div>
 </div>
 <div id="section2" class="container-fluid">
   <h1>Section 2</h1>
+  <div
+  <div id="container" style="width:100%; height:400px;"></div>
+  <script>
+  document.addEventListener('DOMContentLoaded', function () {
+        var myChart = Highcharts.chart('container', {
+            chart: {
+                type: 'bar'
+            },
+            title: {
+                text: 'Fruit Consumption'
+            },
+            xAxis: {
+                categories: ['Apples', 'Bananas', 'Oranges']
+            },
+            yAxis: {
+                title: {
+                    text: 'Fruit eaten'
+                }
+            },
+            series: [{
+                name: 'Jane',
+                data: [1, 0, 4]
+            }, {
+                name: 'John',
+                data: [5, 7, 3]
+            }]
+        });
+    });
+
+
+
+
+  </script>
+  ></div>
   <p>chart</p>
 </div>
 <div id="section3" class="container-fluid">
@@ -76,4 +117,3 @@
 
 </body>
 </html>
-
