--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -15,7 +15,7 @@
       position: relative;
   }
   #section1 {padding-top:90px;height:800px;color: #fff; background-color: #1A5276;}
-  #section2 {padding-top:50px;height:500px;color: #fff; background-color: #FDFEFE;}
+  #section2 {padding-top:00px;height:500px;color: #fff; background-color: #FDFEFE;}
   #section3 {padding-top:50px;height:500px;color: #fff; background-color: #B3B6B7;}
   #section41 {padding-top:50px;height:500px;color: #fff; background-color: #FDFEFE;}
   #section42 {padding-top:50px;height:500px;color: #fff; background-color: #B3B6B7 ;}
@@ -69,30 +69,54 @@
   <div
   <div id="container" style="width:100%; height:400px;"></div>
   <script>
-  document.addEventListener('DOMContentLoaded', function () {
-        var myChart = Highcharts.chart('container', {
-            chart: {
-                type: 'bar'
-            },
-            title: {
-                text: 'Fruit Consumption'
-            },
-            xAxis: {
-                categories: ['Apples', 'Bananas', 'Oranges']
-            },
-            yAxis: {
-                title: {
-                    text: 'Fruit eaten'
-                }
-            },
-            series: [{
-                name: 'Jane',
-                data: [1, 0, 4]
+      Highcharts.chart('container', {
+        chart: {
+            plotBackgroundColor: null,
+            plotBorderWidth: null,
+            plotShadow: false,
+            type: 'pie'
+        },
+        title: {
+            text: "Your Past Month's Spending"
+        },
+        tooltip: {
+            pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+        },
+        plotOptions: {
+            pie: {
+                allowPointSelect: true,
+                cursor: 'pointer',
+                dataLabels: {
+                    enabled: false
+                },
+                showInLegend: true
+            }
+        },
+        series: [{
+            name: 'Brands',
+            colorByPoint: true,
+            data: [{
+                name: 'Chrome',
+                y: 61.41,
+                sliced: true,
+                selected: true
             }, {
-                name: 'John',
-                data: [5, 7, 3]
+                name: 'Internet Explorer',
+                y: 11.84
+            }, {
+                name: 'Firefox',
+                y: 10.85
+            }, {
+                name: 'Edge',
+                y: 4.67
+            }, {
+                name: 'Safari',
+                y: 4.18
+            }, {
+                name: 'Other',
+                y: 7.05
             }]
-        });
+        }]
     });
 
 
@@ -100,7 +124,7 @@
 
   </script>
   ></div>
-  <p>chart</p>
+
 </div>
 <div id="section3" class="container-fluid">
   <h1>Section 3</h1>
