Link fixes (to be incorporated elsewhere)

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -29,8 +29,8 @@
                         About
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/about/why">Why Apprisen?</a>
-                        <a class="dropdown-item" href="/about/faqs">FAQ's</a>
+                        <a class="dropdown-item" href="about/why">Why Apprisen?</a>
+                        <a class="dropdown-item" href="about/faqs">FAQ's</a>
                         <a class="dropdown-item" href="about/testimonials">Client Testimonials</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="about/contact">Contact Us</a>
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="learning">Learning</a>
                 </li>
             </ul>
-            <a href="/login"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
+            <a href="login"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
         </div>
     </nav>
 
