fixed images and finalized frontpage

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -51,12 +51,21 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="finance.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h1>Propel your finance to the next level!</h1>
+        </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="hike.jpg" alt="Second slide">
+             <div class="carousel-caption d-none d-md-block">
+    <h1>We can help you get on the right track!</h1>
+        </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="grad.jpg" alt="Third slide">
+             <div class="carousel-caption d-none d-md-block">
+    <h1>Loan assistance, including student loan.</h1>
+        </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -68,6 +77,15 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+    
+    <div class="jumbotron">
+  <h1 class="display-4">Welcome to Apprisen!</h1>
+  <p class="lead">Our objective has been to develop solutions for all stages of an individual's financial life.As a result of our experience, we have identified the elements of effective money management. That is what has driven the development of many of the materials we use in our sessions and the topics we teach in our communities.</p>
+  <hr class="my-4">
+  <p>Our comprehensive services can help people focus on the skills and concepts that work together to help create a strong financial life. We believe that everyone can benefit by working with Apprisen.</p>
+  <a class="btn btn-primary btn-lg" href="about/why" role="button">Learn more</a>
+</div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
