--- a/public/pages/about/contact.html
+++ b/public/pages/about/contact.html
@@ -12,33 +12,38 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="https://www.apprisen.com/images/default-source/default-album/app-social-facebook0c00.jpg?sfvrsn=4">test</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand"
+            href="https://www.apprisen.com/images/default-source/default-album/app-social-facebook0c00.jpg?sfvrsn=4">test</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            About
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="why.html">Why Apprisen?</a>
-                            <a class="dropdown-item" href="FAQ.html">FAQ's</a>
-                            <a class="dropdown-item" href="client_testimonials.html">Client Testimonials</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="contact.html">Contact Us</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="learning.html">Learning</a>
-                    </li>
-                </ul>
-                    <button class="btn btn-success my-2 my-sm-0" type="submit">Sign Up</button>
-            </div>
-        </nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        About
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="about/why.html">Why Apprisen?</a>
+                        <a class="dropdown-item" href="about/faqs.html">FAQ's</a>
+                        <a class="dropdown-item" href="about/testimonials.html">Client Testimonials</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="about/contact.html">Contact Us</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="learning.html">Learning</a>
+                </li>
+            </ul>
+            <a href="login"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
+        </div>
+    </nav>
+    </body>
+</html>
