--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -29,21 +29,21 @@
                         About
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="about/why">Why Apprisen?</a>
-                        <a class="dropdown-item" href="about/faqs">FAQ's</a>
-                        <a class="dropdown-item" href="about/testimonials">Client Testimonials</a>
+                        <a class="dropdown-item" href="about/why.html">Why Apprisen?</a>
+                        <a class="dropdown-item" href="about/faqs.html">FAQ's</a>
+                        <a class="dropdown-item" href="about/testimonials.html">Client Testimonials</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="about/contact">Contact Us</a>
+                        <a class="dropdown-item" href="about/contact.html">Contact Us</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="services">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="learning">Learning</a>
+                    <a class="nav-link" href="learning.html">Learning</a>
                 </li>
             </ul>
-            <a href="login"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
+            <a href="login.html"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
         </div>
     </nav>
 
@@ -80,10 +80,10 @@
     
     <div class="jumbotron">
   <h1 class="display-4">Welcome to Apprisen!</h1>
-  <p class="lead">Our objective has been to develop solutions for all stages of an individual's financial life.As a result of our experience, we have identified the elements of effective money management. That is what has driven the development of many of the materials we use in our sessions and the topics we teach in our communities.</p>
+  <p class="lead">Our objective has been to develop solutions for all stages of an individual's financial life. As a result of our experience, we have identified the elements of effective money management. That is what has driven the development of many of the materials we use in our sessions and the topics we teach in our communities.</p>
   <hr class="my-4">
   <p>Our comprehensive services can help people focus on the skills and concepts that work together to help create a strong financial life. We believe that everyone can benefit by working with Apprisen.</p>
-  <a class="btn btn-primary btn-lg" href="about/why" role="button">Learn more</a>
+  <a class="btn btn-primary btn-lg" href="about/why.html" role="button">Learn more</a>
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
