--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -23,34 +23,6 @@
       color: #fff;
       background-color: #1A5276;
     }
-
-    #section2 {
-      padding-top: 00px;
-      height: 500px;
-      color: #fff;
-      background-color: #FDFEFE;
-    }
-
-    #section3 {
-      padding-top: 50px;
-      height: 500px;
-      color: #fff;
-      background-color: #B3B6B7;
-    }
-
-    #section41 {
-      padding-top: 50px;
-      height: 500px;
-      color: #fff;
-      background-color: #FDFEFE;
-    }
-
-    #section42 {
-      padding-top: 50px;
-      height: 500px;
-      color: #fff;
-      background-color: #B3B6B7;
-    }
   </style>
 </head>
 
@@ -95,117 +67,50 @@
       </div>
     </div>
   </div>
-  <div id="section2" class="container-fluid">
-    <h1>Section 2</h1>
-    <p>chart</p>
-  </div>
-  <div id="section3" class="container-fluid">
-    <h1>Section 3</h1>
-    <p>chart</p>
-  </div>
-  <div id="section41" class="container-fluid">
-    <h1>Section 4 Submenu 1</h1>
-    <p>link</p>
-  </div>
-  <div id="section42" class="container-fluid">
-    <h1>Section 4 Submenu 2</h1>
-    <p>link</p>
-  </div>
-
 </body>
-
 </html>
-=======
 </button>
-<a class="navbar-brand" href="#">Logo</a>
-</div>
-<div>
-  <div class="collapse navbar-collapse" id="myNavbar">
-    <ul class="nav navbar-nav">
-      <li><a href="#section1">Progress</a></li>
-      <li><a href="#section2">Total</a></li>
-      <li><a href="#section3">Individual</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">External Resources<span
-            class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#section41">Source Section 1</a></li>
-          <li><a href="#section42">Source Section 2</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</div>
-</div>
-</nav>
 
-<div id="section1" class="container-fluid">
-  <h1>
-    <center>Hello Test!</center>
-  </h1>
-  <div data-preset="stripe" data-fill-background="f99" class="ldBar label-center" data-transition-in="35"
-    data-value="35" style="width:70%;height:50%;margin:auto"></div>
-</div>
-</div>
-</div>
 <div id="section2" class="container-fluid">
   <h1>Section 2</h1>
   <div <div id="container" style="width:100%; height:400px;"></div>
   <script>
-    Highcharts.chart('container', {
-      chart: {
-        plotBackgroundColor: null,
-        plotBorderWidth: null,
-        plotShadow: false,
-        type: 'pie'
-      },
-      title: {
-        text: "Your Past Month's Spending"
-      },
-      tooltip: {
-        pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
-      },
-      plotOptions: {
-        pie: {
-          allowPointSelect: true,
-          cursor: 'pointer',
-          dataLabels: {
-            enabled: false
-          },
-          showInLegend: true
-        }
-      },
-      series: [{
-        name: 'Brands',
-        colorByPoint: true,
-        data: [{
-          name: 'Chrome',
-          y: 61.41,
-          sliced: true,
-          selected: true
-        }, {
-          name: 'Internet Explorer',
-          y: 11.84
-        }, {
-          name: 'Firefox',
-          y: 10.85
-        }, {
-          name: 'Edge',
-          y: 4.67
-        }, {
-          name: 'Safari',
-          y: 4.18
-        }, {
-          name: 'Other',
-          y: 7.05
-        }]
-      }]
-    });
-
-
-
+  try {
+    const fs = require('fs');
+    const fileContents = fs.readFileSync('./databases/people-data.json', 'utf8');
+    const data = JSON.parse(fileContents);
+    console.log(debts);
+  }catch(err){
+    console.log(err.message);
+  }
+  var debts = [{name: 'Brands', colorByPoint: true, data: [{name: 'Chase Freedom Credit Card', y: 2500, sliced: true}, {name: 'Chase Sapphire Credit Card', y: 900}, {name: 'Car Loan', y: 9000}, {name: 'Student Loans', y: 15000}]}];
+  Highcharts.chart('container', {
+    chart: {
+      plotBackgroundColor: null,
+      plotBorderWidth: null,
+      plotShadow: false,
+      type: 'pie'
+    },
+    title: {
+      text: "Your Debt Sources"
+    },
+    tooltip: {
+      pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+    },
+    plotOptions: {
+      pie: {
+        allowPointSelect: true,
+        cursor: 'pointer',
+        dataLabels: {
+          enabled: false
+        },
+        showInLegend: true
+      }
+    },
+    series: debts
+  });
 
   </script>
-  >
 </div>
 
 </div>
