--- a/public/pages/about/faqs.html
+++ b/public/pages/about/faqs.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        
-        <link href="stylesheets/homepage.css" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<head>
+    <link rel="icon" href="favicon.ico?v=1.1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="../stylesheets/homepage.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <title>Apprisen</title>
+</head>
 
-        <title>Apprisen</title>
-    </head>
-
-    <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand"
-            href="https://www.apprisen.com/images/default-source/default-album/app-social-facebook0c00.jpg?sfvrsn=4">test</a>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/"><img class="mb-4 d-inline-block align-middle" src="../images/logo.png" alt=""
+                width="36" height="36"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,22 +27,47 @@
                         About
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="about/why.html">Why Apprisen?</a>
-                        <a class="dropdown-item" href="about/faqs.html">FAQ's</a>
-                        <a class="dropdown-item" href="about/testimonials.html">Client Testimonials</a>
+                        <a class="dropdown-item" href="why">Why Apprisen?</a>
+                        <a class="dropdown-item" href="faqs">FAQ's</a>
+                        <a class="dropdown-item" href="testimonials">Client Testimonials</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="about/contact.html">Contact Us</a>
+                        <a class="dropdown-item" href="contact">Contact Us</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                    <a class="nav-link" href="../services">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="learning.html">Learning</a>
+                    <a class="nav-link" href="../learning">Learning</a>
                 </li>
             </ul>
             <a href="login"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
         </div>
     </nav>
-    </body>
+
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to Apprisen!</h1>
+        <p class="lead">Our objective has been to develop solutions for all stages of an individual's financial life. As
+            a result of our experience, we have identified the elements of effective money management. That is what has
+            driven the development of many of the materials we use in our sessions and the topics we teach in our
+            communities.</p>
+        <hr class="my-4">
+        <p>Our comprehensive services can help people focus on the skills and concepts that work together to help create
+            a strong financial life. We believe that everyone can benefit by working with Apprisen.</p>
+        <a class="btn btn-primary btn-lg" href="about/why" role="button">Learn more</a>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
