--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -5,17 +5,15 @@
     <link rel="icon" href="favicon.ico?v=1.1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <link href="stylesheets/homepage.css" rel="stylesheet">
+    <link href="../stylesheets/homepage.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
     <title>Apprisen</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand"
-            href="https://www.apprisen.com/images/default-source/default-album/app-social-facebook0c00.jpg?sfvrsn=4">test</a>
+        <a class="navbar-brand" href="/"><img class="mb-4 d-inline-block align-middle" src="../images/logo.png" alt=""
+                width="36" height="36"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,67 +27,69 @@
                         About
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="about/why.html">Why Apprisen?</a>
-                        <a class="dropdown-item" href="about/faqs.html">FAQ's</a>
-                        <a class="dropdown-item" href="about/testimonials.html">Client Testimonials</a>
+                        <a class="dropdown-item" href="about/why">Why Apprisen?</a>
+                        <a class="dropdown-item" href="about/faqs">FAQ's</a>
+                        <a class="dropdown-item" href="about/testimonials">Client Testimonials</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="about/contact.html">Contact Us</a>
+                        <a class="dropdown-item" href="about/contact">Contact Us</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                    <a class="nav-link" href="services">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="learning.html">Learning</a>
+                    <a class="nav-link" href="learning">Learning</a>
                 </li>
             </ul>
-            <a href="login.html"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
+            <a href="login"><button class="btn btn-success my-2 my-sm-0">Sign Up</button></a>
         </div>
     </nav>
 
-   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="finance.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h1>Propel your finance to the next level!</h1>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="../images/finance.jpg" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1>Propel your finance to the next level!</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../images/hike.jpg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1>We can help you get on the right track!</h1>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../images/grad.jpg" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1>Loan assistance, including student loan.</h1>
+                </div>
+            </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="hike.jpg" alt="Second slide">
-             <div class="carousel-caption d-none d-md-block">
-    <h1>We can help you get on the right track!</h1>
-        </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="grad.jpg" alt="Third slide">
-             <div class="carousel-caption d-none d-md-block">
-    <h1>Loan assistance, including student loan.</h1>
-        </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-    
+
     <div class="jumbotron">
-  <h1 class="display-4">Welcome to Apprisen!</h1>
-  <p class="lead">Our objective has been to develop solutions for all stages of an individual's financial life. As a result of our experience, we have identified the elements of effective money management. That is what has driven the development of many of the materials we use in our sessions and the topics we teach in our communities.</p>
-  <hr class="my-4">
-  <p>Our comprehensive services can help people focus on the skills and concepts that work together to help create a strong financial life. We believe that everyone can benefit by working with Apprisen.</p>
-  <a class="btn btn-primary btn-lg" href="about/why.html" role="button">Learn more</a>
-</div>
+        <h1 class="display-4">Welcome to Apprisen!</h1>
+        <p class="lead">Our objective has been to develop solutions for all stages of an individual's financial life. As
+            a result of our experience, we have identified the elements of effective money management. That is what has
+            driven the development of many of the materials we use in our sessions and the topics we teach in our
+            communities.</p>
+        <hr class="my-4">
+        <p>Our comprehensive services can help people focus on the skills and concepts that work together to help create
+            a strong financial life. We believe that everyone can benefit by working with Apprisen.</p>
+        <a class="btn btn-primary btn-lg" href="about/why" role="button">Learn more</a>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
