--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -151,7 +151,7 @@
       firebase.initializeApp(config);
     </script>
     <form style="text-align: center">
-      <input type="submit" id="submit" value="submit" href="dashboard.html">
+      <input type="submit" id="submit" value="Submit" href="dashboard.html">
     </form>
     <script>
       var nombre = document.getElementById("nombre");
