Added external financial resources

--- a/public/pages/dashboard/dashboard.html
+++ b/public/pages/dashboard/dashboard.html
@@ -47,8 +47,10 @@
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">External Resources<span
                   class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#section41">Source Section 1</a></li>
-                <li><a href="#section42">Source Section 2</a></li>
+                <li><a href="http://content.moneyinstructor.com/232/5-steps-to-healthy-spending-habits.html">Healthy Spending Habits</a></li>
+                <li><a href="https://www.practicalmoneyskills.com/learn/budgeting/budgeting_basics">Budgeting Basics</a></li>
+                <li><a href="https://www.experian.com/blogs/ask-experian/credit-education/improving-credit/building-credit/">Building Credit</a></li>
+                <li><a href="https://bettermoneyhabits.bankofamerica.com/en/saving-budgeting/ways-to-save-money">Guide to Saving Money</a></li>
               </ul>
             </li>
           </ul>
